ingress-controller/host-based/04-demo-ingress-file.yaml
#ensure that you have your public DNS or you can write local dns entry in host file.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-localhost
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    #service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: demoinfra.info
    http:
      paths:
      - backend:
          service:
            name: demo
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
